fixed notch color on iphone

--- a/src/components/Navbar/index.module.css
+++ b/src/components/Navbar/index.module.css
@@ -14,7 +14,7 @@
 }
 
 .socialMedia {
-  font-size: 24px;
+  font-size: 28px;
   margin-left: 16px;
   color: #2c3e56;
   transition: all 0.3s ease-in-out;
